--- a/public/workshops/1/index.html
+++ b/public/workshops/1/index.html
@@ -73,13 +73,8 @@
 
     <div class="container-fluid">
         
-    <h1>About</h1>
-
-<div class="px-4 py-5 my-5 text-center">
-    <p class="lead">О нас</p>
-</div>
-
-
+    <p>Мастер-класс для детей от 6 лет мозаика в деревянной форме.</p>
+<p>Детские группы работают с уже наколотой мозаикой и запеченными стеклышками :)</p>
 
 
     </div>
