--- a/public/shop/index.html
+++ b/public/shop/index.html
@@ -73,14 +73,7 @@
 
     <div class="container-fluid">
         
-    <h1>About</h1>
-
-<div class="px-4 py-5 my-5 text-center">
-    <p class="lead">О нас</p>
-</div>
-
-
-
+    <h1>Магазин</h1>
 
     </div>
 
